# fulo

./: .editorconfig  .gitignore  README.md  meson.build
data/: fulo.appdata.xml.in  fulo.desktop.in  fulo.gresource.xml  meson.build
data/css/: main.css
po/: POTFILES  com.github.arviantodwi.fulo.pot  id.po
src/: Application.vala  Helpers.vala  MainWindow.vala
src/Enums/: Format.vala  PresetColor.vala
src/Views/: ColorPickerView.vala  SwatchesBox.vala
src/Widgets/: ColorName.vala  ColorRegion.vala  ColorSwatch.vala  Contrast.vala  CustomSwatches.vala  Format.vala  HexEntry.vala  HueRange.vala  OpacityRange.vala  PickerButton.vala  PresetSwatches.vala
src/Widgets/Editor/: AlphaSlider.vala  Chooser.vala  ColorEditor.vala  Contrast.vala  HueSlider.vala
src/Widgets/Swatch/: SwatchGroup.vala  SwatchItem.vala
